# WeHelp-5

./: .gitignore  README.md
week1/: index.html  style.css
week2/: assignment-2.html  assignment-2.py
week3/: article.csv  assignment-3.js  assignment-3.py  index.html  mrt.csv  pyproject.toml  spot.csv  style.css
week4/: pyproject.toml
week4/test/: test_simple.py
week4/week4/: __init__.py  __main__.py  app.py
week4/week4/routers/: login.py
week4/week4/static/css/: style.css
week4/week4/static/js/: app.js
week4/week4/templates/: calculator.html  error.html  index.html  member.html
week4/week4/utils/: __init__.py
week5/: README.md  data.sql  pyproject.toml
week5-extra/: database_connect.py  my_models.py  pyproject.toml
week6/: pyproject.toml
week6/week6/: __init__.py  __main__.py  app.py
week6/week6/db/: connection.py  schema.py
week6/week6/routers/: login.py
week6/week6/setting/: config.py
week6/week6/sql_template/: __init__.py  messages.py  users.py
week6/week6/statics/css/: style.css
week6/week6/statics/js/: app.js
week6/week6/templates/: base.html  error.html  index.html  member.html
week7/: pyproject.toml
week7/week7/: __init__.py  __main__.py  app.py
week7/week7/db/: connection.py  schema.py
week7/week7/routers/: login.py
week7/week7/setting/: config.py
week7/week7/sql_template/: __init__.py  users.py
week7/week7/statics/js/: app.js
week7/week7/templates/: member.html
week8/: pyproject.toml
week8/Task1/: productDisplay.js  task1.css  userTracking.js  withAsync.html  withDefer.html  withoutAsync.html  withoutDefer.html
week8/Task3/: login.html  login.js  main.py
week8/Task5/: fetch.js  message.html
week8/Task6/: connection.py
week8/Task7/: login.html
wk1/: index.html  style.css
