[tool.poetry]
name = "week4"
version = "0.1.0"
description = ""
authors = ["AliceKuo <ming-chieh.kuo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
